# gitstory

./: .bazelrc  .clang-format  .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  WORKSPACE  libgit2_demo_cli.cpp
gitxx/: BUILD  blame.cpp  blame.hpp  blame.inl  blob.cpp  blob.hpp  commit.cpp  commit.hpp  errors.cpp  errors.hpp  errors_mapping.inl  gitxx.hpp  global.cpp  global.hpp  oid.cpp  oid.hpp  oid_static_string.hpp  refs.cpp  refs.hpp  repository.cpp  repository.hpp  rules_cc.bzl  signature.cpp  signature.hpp  tree.cpp  tree.hpp  unique_ptr.hpp
gitxx/tests/: BUILD  refs_test.cpp  repository_test.cpp
test/: BUILD  check_invoke_nothrow.hpp
